<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividad1"
    android:orientation="horizontal"
    android:background="@color/azul">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="130dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono" />

    <EditText
        android:id="@+id/edtTipeEmal"
        android:layout_width="368dp"
        android:layout_height="65dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/edtblanco"
        android:ems="10"
        android:hint="@string/emailId"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtTypePass"
        android:layout_width="368dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/typePassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTipeEmal"
        android:background="@drawable/edtblanco"/>

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/naranja"
        android:onClick="Login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtTypePass"
        app:layout_constraintStart_toStartOf="@+id/edtTypePass"
        app:layout_constraintTop_toBottomOf="@+id/edtTypePass"
        app:layout_constraintVertical_bias="0.15" />
</androidx.constraintlayout.widget.ConstraintLayout>